@@ -730,6 +730,7 @@ CREATE TABLE ART_USER_GROUP_JOBS
 
 -- OPEN_IN_NEW_WINDOW: boolean
 -- ALLOW_SELECT_PARAMETERS: boolean
+-- RUN_IMMEDIATELY: boolean
 
 CREATE TABLE ART_DRILLDOWN_QUERIES
 (
@@ -742,6 +743,7 @@ CREATE TABLE ART_DRILLDOWN_QUERIES
 	OUTPUT_FORMAT VARCHAR(50),
 	OPEN_IN_NEW_WINDOW INTEGER,
 	ALLOW_SELECT_PARAMETERS INTEGER,
+	RUN_IMMEDIATELY INTEGER,
 	CONSTRAINT art_drq_pk PRIMARY KEY(DRILLDOWN_ID),
 	CONSTRAINT art_drq_uq_qid_drqpos UNIQUE(QUERY_ID, DRILLDOWN_QUERY_POSITION)
 );
