@@ -61,7 +61,7 @@ CREATE MEMORY TABLE PUBLIC.ART_USER_GROUP_ASSIGNMENT(USERNAME VARCHAR(50) NOT NU
 CREATE MEMORY TABLE PUBLIC.ART_USER_GROUP_QUERIES(USER_GROUP_ID INTEGER NOT NULL,QUERY_ID INTEGER NOT NULL,PRIMARY KEY(USER_GROUP_ID,QUERY_ID))
 CREATE MEMORY TABLE PUBLIC.ART_USER_GROUP_GROUPS(USER_GROUP_ID INTEGER NOT NULL,QUERY_GROUP_ID INTEGER NOT NULL,PRIMARY KEY(USER_GROUP_ID,QUERY_GROUP_ID))
 CREATE MEMORY TABLE PUBLIC.ART_USER_GROUP_JOBS(USER_GROUP_ID INTEGER NOT NULL,JOB_ID INTEGER NOT NULL,PRIMARY KEY(USER_GROUP_ID,JOB_ID))
-CREATE MEMORY TABLE PUBLIC.ART_DRILLDOWN_QUERIES(QUERY_ID INTEGER NOT NULL,DRILLDOWN_QUERY_ID INTEGER NOT NULL,DRILLDOWN_QUERY_POSITION INTEGER NOT NULL,DRILLDOWN_TITLE VARCHAR(50),DRILLDOWN_TEXT VARCHAR(50),OUTPUT_FORMAT VARCHAR(50),OPEN_IN_NEW_WINDOW INTEGER,DRILLDOWN_ID INTEGER,ALLOW_SELECT_PARAMETERS INTEGER,PRIMARY KEY(QUERY_ID,DRILLDOWN_QUERY_POSITION))
+CREATE MEMORY TABLE PUBLIC.ART_DRILLDOWN_QUERIES(QUERY_ID INTEGER NOT NULL,DRILLDOWN_QUERY_ID INTEGER NOT NULL,DRILLDOWN_QUERY_POSITION INTEGER NOT NULL,DRILLDOWN_TITLE VARCHAR(50),DRILLDOWN_TEXT VARCHAR(50),OUTPUT_FORMAT VARCHAR(50),OPEN_IN_NEW_WINDOW INTEGER,DRILLDOWN_ID INTEGER,ALLOW_SELECT_PARAMETERS INTEGER,RUN_IMMEDIATELY INTEGER,PRIMARY KEY(QUERY_ID,DRILLDOWN_QUERY_POSITION))
 CREATE MEMORY TABLE PUBLIC.ART_USER_GROUP_RULES(USER_GROUP_ID INTEGER NOT NULL,RULE_NAME VARCHAR(50) NOT NULL,RULE_VALUE VARCHAR(100) NOT NULL,RULE_TYPE VARCHAR(6),RULE_ID INTEGER,RULE_VALUE_KEY VARCHAR(50))
 CREATE MEMORY TABLE PUBLIC.ART_USER_JOBS(JOB_ID INTEGER NOT NULL,USERNAME VARCHAR(50) NOT NULL,USER_GROUP_ID INTEGER,LAST_FILE_NAME VARCHAR(4000),LAST_START_DATE TIMESTAMP,LAST_END_DATE TIMESTAMP,USER_ID INTEGER,LAST_RUN_DETAILS VARCHAR(4000),LAST_RUN_MESSAGE VARCHAR(100),PRIMARY KEY(JOB_ID,USERNAME))
 CREATE MEMORY TABLE PUBLIC.ART_JOB_ARCHIVES(ARCHIVE_ID VARCHAR(100) NOT NULL PRIMARY KEY,JOB_ID INTEGER NOT NULL,USERNAME VARCHAR(50) NOT NULL,ARCHIVE_FILE_NAME VARCHAR(4000),END_DATE TIMESTAMP,JOB_SHARED VARCHAR(1),USER_ID INTEGER,START_DATE TIMESTAMP)
@@ -737,12 +737,12 @@ INSERT INTO ART_USER_GROUP_ASSIGNMENT VALUES('auser',2,2)
 INSERT INTO ART_USER_GROUP_QUERIES VALUES(2,2)
 INSERT INTO ART_USER_GROUP_GROUPS VALUES(2,3)
 INSERT INTO ART_USER_GROUP_GROUPS VALUES(2,4)
-INSERT INTO ART_DRILLDOWN_QUERIES VALUES(8,23,1,'Drill','details','htmlDataTable',1,1,1)
-INSERT INTO ART_DRILLDOWN_QUERIES VALUES(14,15,1,'Details  (web)','link','htmlGrid',NULL,2,1)
-INSERT INTO ART_DRILLDOWN_QUERIES VALUES(14,15,2,'Details (Spreadsheet)','xls','xls',NULL,3,1)
-INSERT INTO ART_DRILLDOWN_QUERIES VALUES(83,23,1,'Drill','details','htmlDataTable',1,1,1)
-INSERT INTO ART_DRILLDOWN_QUERIES VALUES(84,23,1,'Drill','details','htmlDataTable',1,1,1)
-INSERT INTO ART_DRILLDOWN_QUERIES VALUES(86,23,1,'Drill','details','htmlDataTable',1,1,1)
+INSERT INTO ART_DRILLDOWN_QUERIES VALUES(8,23,1,'Drill','details','htmlDataTable',1,1,1,1)
+INSERT INTO ART_DRILLDOWN_QUERIES VALUES(14,15,1,'Details  (web)','link','htmlGrid',NULL,2,1,1)
+INSERT INTO ART_DRILLDOWN_QUERIES VALUES(14,15,2,'Details (Spreadsheet)','xls','xls',NULL,3,1,1)
+INSERT INTO ART_DRILLDOWN_QUERIES VALUES(83,23,1,'Drill','details','htmlDataTable',1,1,1,1)
+INSERT INTO ART_DRILLDOWN_QUERIES VALUES(84,23,1,'Drill','details','htmlDataTable',1,1,1,1)
+INSERT INTO ART_DRILLDOWN_QUERIES VALUES(86,23,1,'Drill','details','htmlDataTable',1,1,1,1)
 INSERT INTO ART_USER_JOBS VALUES(2,'auser',NULL,NULL,NULL,NULL,2,NULL,NULL)
 INSERT INTO ART_DATABASE_VERSION VALUES('4.11-snapshot')
 INSERT INTO ART_PARAMETERS VALUES(1,'regionId','Select Region','Single-Value','Region','Select one item from the list','Integer','',0,1,4,0,0,0,NULL,NULL,'2016-04-15 09:42:18.784000','admin',NULL,0,NULL,NULL,NULL,NULL,0,NULL,0)
