@@ -146,6 +146,7 @@ drilldowns.label.headerText            = Header Text
 drilldowns.label.linkText              = Link Text
 drilldowns.label.openInNewWindow       = Open In New Window
 drilldowns.label.reportFormat          = Report Format
+drilldowns.label.runImmediately        = Run Immediately
 drilldowns.option.all                  = All
 drilldowns.option.default              = Default
 drilldowns.text.drilldownReport        = Drilldown Report
