@@ -146,6 +146,7 @@ drilldowns.label.headerText            = Matini-vichwa
 drilldowns.label.linkText              = Matinifora
 drilldowns.label.openInNewWindow       = Fungua kwenye ukurasa mpya
 drilldowns.label.reportFormat          = Fomati ya ripoti
+drilldowns.label.runImmediately        = Tekeleza mara moja
 drilldowns.option.all                  = Zote
 drilldowns.option.default              = Msingi
 drilldowns.text.drilldownReport        = Ripoti-Undani
